Correct alignment of Website

--- a/4-5-webpage/css/main.css
+++ b/4-5-webpage/css/main.css
@@ -58,3 +58,7 @@ body {
 	padding: 30px 0;  	
 }
 
+#space{
+	padding: 120px 0;
+}
+
